--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="fridayAbbrv">FRI</string>
     <string name="saturdayAbbrv">SAT</string>
     <string name="_1">1</string>
+    <string name="new_event">New Event</string>
+    <string name="weekly">Weekly</string>
+    <string name="time">Time:</string>
+    <string name="date">Date:</string>
+    <string name="event">Event</string>
 </resources>
